# simplethanks-flet

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
src/: main.py
src/localisation/: __init__.py  translation.py
