[project]
name = "simplethanks"
version = "2025.4.21"
description = "Just a simple thanks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tct123", email = "tct1234@protonmail.com" }]
dependencies = ["flet>=0.80.5", "mylocale", "flet_localisation", "flet-audio"]

[dependency-groups]
dev = ["flet-cli>=0.80.5", "flet-desktop>=0.80.5", "flet-web>=0.80.5"]

[tool.flet]
org = "de.cmg"
product = "Simple Thanks"
company = "Creative Media Group"
copyright = "Copyright (C) 2023-2026 by Creative Media Group"

[tool.flet.android]
dependencies = ["pyjnius"]

[tool.flet.ios]
dependencies = ["pyobjus"]

[tool.flet.app]
path = "src"
